Fix vdeo layout problems

--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
         'header header header header header header'
         'nav nav nav nav nav nav'
         'left left middle middle right right'
-        'footer footer footer footer footer footer';
-       
+        'footer footer footer footer footer footer';     
 }
 
 .header{
@@ -56,9 +55,6 @@
         padding:10px;
         text-decoration: none;
 }
-
-
-
 .topnav a:hover {
         background-color:#e7e9ec;
         color:black;
@@ -79,7 +75,6 @@
   .middle{
           grid-area: middle;
   }
-
   .left img{
       border: 1px solid #ddd;
       border-radius: 4px;
@@ -120,7 +115,7 @@
   h1{
       font-family: 'Clicker Script', cursive;
       text-align: center;
-}
+     }
  h2{ text-align: center;}
 
  .right p::first-letter{
@@ -254,21 +249,6 @@ input[type=text], textarea{
         .middle img{
                 width: 90%;
         }    
-        .left iframe{
-                width:70%;
-                height: 70%;
-                 padding:10PX 0;
-        }
-        .middle iframe{
-                width:70%;
-                height: 70%;
-                 padding:10PX 0;
-        }
-        .right iframe{
-                width:70%;
-                
-                 padding:10PX 0;
-        }
         form{
                 padding: 50px 200px;
         }
